UCSFD8-879 fixing the extra space at the bottom of the article galleries

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -7699,7 +7699,10 @@ a[href*="http"] .article-header__date {
   overflow: visible; }
 
 .field-gallery-items .field-gallery-image {
-  background-color: #fff; }
+  background-color: #fff;
+  height: 0;
+  padding-bottom: 66%;
+ }
 
 .field-gallery-items img {
   margin: 0 auto;
